# BG_Project_2

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: default.vert
src/: cube_template_vertices.h  main.cpp  scene.cpp  scene.h  shader_utils.h
